@@ -1,5 +1,7 @@
   Version 3.41
-  1. Added a handle() method to the lightweight upload
+  1. Fix url() returning incorrect path when query string contains escaped newline.
+  2. Added additional windows temporary directories and environment variables, courtesy patch from Renee Baecker
+  3. Added a handle() method to the lightweight upload
   filehandles. This method returns a real IO::Handle object.
 
   Version 3.40
